--- a/app/assets/stylesheets/landing_page2.css
+++ b/app/assets/stylesheets/landing_page2.css
@@ -3028,7 +3028,8 @@
 /* Banner */
 
 	#banner {
-		background-attachment: scroll,							fixed;
+		/*background-attachment: scroll,							fixed;*/
+		background-attachment:fixed;
 		background-color: #666;
 		background-image: url("overlay.png"), url("paris2.jpg");
 		background-position: top left,						center center;
