--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,9 +6,10 @@
   <!-- <h1><a href="<%= root_path %>"><%=image_tag("logo.png")%></a></h1> -->
   <nav class="links">
     <ul>
-      <li><a href="<%= flights_path %>">Trips</a></li>
-      <li><a href="<%= requests_path %>">Requests</a></li>
-      <li><a href="<%= conversations_path %>">Inbox</a></li>
+      <li><a href="<%= flights_path %>">Trips </a></li>
+      <li><a href="<%= requests_path %>">Requests </a></li>
+      <li><a href="<%= conversations_path %>">Inbox <span class="badge"><%= current_user.unread_conversations.count if 
+              current_user.unread_conversations.count > 0%></span></a></li>
       <li><a href="<%= users_path %>">Friends</a></li>
     </ul>
   </nav>
@@ -58,11 +59,21 @@
                   </li>
 
                   <% end %>
+
                   <li><a href="<%= flights_path %>"><h3>All Trips</h3></a></li>
+
                   <li><a href="<%= created_flights_path(user_id: current_user.id) %>"><h3>My Trips</h3></a></li>
+
                   <li><a href="<%= requests_path %>"><h3>All Requests</h3></a></li>
                   <li><a href="<%= created_requests_path(user_id: current_user.id) %>"><h3>My Requests</h3></a></li>
-                  <li><a href="<%= conversations_path %>"><h3>Inbox</h3></a></li>
+
+                  <li><a href="<%= conversations_path %>">
+                    <h3>Inbox<span class="badge"><%= current_user.unread_conversations.count if 
+              current_user.unread_conversations.count > 0%></span>
+                    </h3>
+                      </a>
+                  </li>
+
                   <li><a href="<%= users_path %>"><h3>Friends</h3></a></li>
                 </ul>
               </section>
