--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3573,7 +3573,9 @@
 @media screen and (max-width: 736px) {
 
 	.inbox .scrollable{
-		width: 100%
+		height: 40vh;
+		width: 100%;
+		font-size: 80%
 	}
 
 	.inbox_form_field{
