--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -21,7 +21,7 @@
         <% elsif current_user.followed_by?(user) and !current_user.following?(user) %>
         <%= button_to "Ignore", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
 
-        <%= button_to "Accept", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
+        <%= button_to "Accept", { action: "follow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
         <% elsif current_user.following?(user) and !current_user.followed_by?(user) %>
         <%= button_to "Your Request Is Pending", { action: "unfollow",method: :put, controller: 'users',remote: true, class: 'icon fa-envelope follow',user_id: user.id} %>
         <% else current_user.following?(user) and !current_user.followed_by?(user) %>
