back to original invite method

--- a/app/views/users/find_index.html.erb
+++ b/app/views/users/find_index.html.erb
@@ -59,7 +59,7 @@
     &link=www.apostell.com
     &redirect_uri=https://facebook.com",
     target: '_blank',
-    class:"button big invite_friends" %> 
+    class:"button big" %> 
     <% end %>
 
   </center>
