New "what we do" description
Changed the description of what we do to match slight pivot in business model.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <!-- Banner -->
         <section id="banner">
           <h1 class="title">APOSTELL</h1>
-          <p>One Community. One Million Shipping Destinations.</p>
+          <p>One Stop. One Million Shipping Destinations.</p>
           <ul class="actions">
             <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook" %></li>
             <li><a href="#features" class="button">Learn More</a></li>
@@ -67,20 +67,20 @@
               </section>
               <section>
                 <span class="icon major fa-search accent3"></span>
-                <h3>Find Travelling Friends</h3>
-                <p>Friends or, friends of friends are constantly travelling and probably even heading to the destination you need to send your package to.</p>
+                <h3>Find Served Routes</h3>
+                <p>Chances are we have empty luggage space on a flight heading to the destination you're sending your package to.</p>
               </section>
             </div>
             <div class="features-row">
               <section>
-                <span class="icon major fa-envelope-o accent4"></span>
-                <h3>Connect</h3>
-                <p>Get in touch with them and make arrangements to get your package delivered to where it needs to be.</p>
+                <span class="icon major fa-plane accent5"></span>
+                <h3>Sell you luggage space</h3>
+                <p>Let us know when and where you're travelling. Hvae free luggage space? We'll but it.</p>
               </section>
               <section>
-                <span class="icon major fa-plane accent5"></span>
-                <h3>Post Your Trips</h3>
-                <p>Return the favor. Let your friends know when you’re travelling, and be the one helping them get their package to where it needs to be. </p>
+                <span class="icon major fa-envelope-o accent4"></span>
+                <h3>Connect</h3>
+                <p>Get in touch with us to make arrangements and get packages to where they need to be.</p>
               </section>
             </div>
           </section>
