--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,8 +6,8 @@
   <!-- <h1><a href="<%= root_path %>"><%=image_tag("logo.png")%></a></h1> -->
   <nav class="links">
     <ul>
-      <li><a href="<%= flights_path %>">Trips </a></li>
-      <li><a href="<%= requests_path %>">Requests </a></li>
+      <li><a href="<%= created_flights_path(user_id: current_user.id) %>">Trips </a></li>
+      <li><a href="<%= created_requests_path(user_id: current_user.id) %>">Requests </a></li>
       <li><a href="<%= conversations_path %>">Inbox <span class="badge"><%= current_user.unread_conversations.count if 
               current_user.unread_conversations.count > 0%></span>
           </a>
@@ -66,11 +66,11 @@
 
                   <% end %>
 
-                  <li><a href="<%= flights_path %>"><h3>All Trips</h3></a></li>
+  <!--                <li><a href="<%= flights_path %>"><h3>All Trips</h3></a></li> -->
 
                   <li><a href="<%= created_flights_path(user_id: current_user.id) %>"><h3>My Trips</h3></a></li>
 
-                  <li><a href="<%= requests_path %>"><h3>All Requests</h3></a></li>
+  <!--                <li><a href="<%= requests_path %>"><h3>All Requests</h3></a></li> -->
                   <li><a href="<%= created_requests_path(user_id: current_user.id) %>"><h3>My Requests</h3></a></li>
 
                   <li><a href="<%= conversations_path %>">
