commented out all flights all requests and login redirect

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <!-- Banner -->
         <section id="banner">
           <h1 class="title">APOSTELL</h1>
-          <p>One Stop. One Million Shipping Destinations.</p>
+          <p>One Stop. Thousand Shipping Destinations.</p>
           <ul class="actions">
             <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook" %></li>
             <li><a href="#features" class="button">Learn More</a></li>
@@ -67,15 +67,15 @@
               </section>
               <section>
                 <span class="icon major fa-search accent3"></span>
-                <h3>Find Served Routes</h3>
+                <h3>Ship your items</h3>
                 <p>Chances are we have empty luggage space on a flight heading to the destination you're sending your package to.</p>
               </section>
             </div>
             <div class="features-row">
               <section>
                 <span class="icon major fa-plane accent5"></span>
-                <h3>Sell you luggage space</h3>
-                <p>Let us know when and where you're travelling. Hvae free luggage space? We'll but it.</p>
+                <h3>Sell your luggage space</h3>
+                <p>Let us know when and where you're travelling. Have free luggage space? We'll buy it.</p>
               </section>
               <section>
                 <span class="icon major fa-envelope-o accent4"></span>
