precompiled assets for production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,10 +41,10 @@
         <section id="banner">
           <h1 class="title">Bienvenu chez Zoya.</h1>
           <p>Trouvez votre transport en ville à la minute.</p>
-<!--          <ul class="actions">
-            <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook " %></li> -->
+          <ul class="actions">
+<!--            <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook " %></li> -->
             <li><a href="#features" class="button">En Savoir Plus</a></li>
-            <li><a href="#features" class="button">En Savoir Plus</a></li>
+            <li><a href="#cta" class="button">Nous Contacter</a></li>
           </ul> 
         </section>
 
@@ -56,7 +56,7 @@
               <h2>Trouver du transport et se déplacer en ville ne devrait pas être une tâche difficile pour vous.</h2>
               <p>Grâce à Zoya, trouver facilement des chauffeurs et déplacez vous en toute tranquilité.</p>
             </header>
-            <span class="image featured"><%= image_tag("gps.jpg") %></span>
+            <span class="image featured"><%= image_tag("lady.jpg") %></span>
           </section>
 
           <section class="box special features" id="features">
