--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
           <section class="box special">
             <header class="major">
               <h2>Trouver du transport et se déplacer en ville ne devrait pas être une tâche difficile pour vous.</h2>
-              <p>Grâce à Zoya, trouver facilement des chauffeurs et déplacez vous en toute tranquilité.</p>
+              <p>Grâce à Zoya, trouvez facilement des chauffeurs et déplacez vous en toute tranquilité.</p>
             </header>
             <span class="image featured"><%= image_tag("woman.jpg") %></span>
           </section>
