updated contact info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 
           <h2>Les services de Zoya vous intéressent?</h2>
           <p>Si vous disposez de véhicules et souhaitez accroître vos revenus, n'hésitez pas à nous contacter.</p>
-          <p> contact@tozoya.com  +243 347 22 30 </p>
+          <p> contact@tozoya.com &#124 +243 347 22 30 </p>
           <p>Nous sommes également ouverts à toutes remarques, suggestions ou demandes d'information.</p>
 <!--          <ul class="actions">
             <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button icon fa-facebook " %></li>
