updated contact info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
 
           <h2>Les services de Zoya vous intéressent?</h2>
           <p>Si vous disposez de véhicules et souhaitez accroître vos revenus, n'hésitez pas à nous contacter.</p>
-          <p style="color: black"> contact@tozoya.com &#124; +243 347 22 30 </p>
+          <p style="color: black"> contact@tozoya.com &#124; +243 84 129 34 49</p>
           <p>Nous sommes également ouverts à toutes remarques, suggestions ou demandes d'information.</p>
 <!--          <ul class="actions">
             <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button icon fa-facebook " %></li>
@@ -107,7 +107,7 @@
         <footer id="footer">
           <ul class="icons">
             <li><a href="https://facebook.com/bazoya" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="https://www.instagram.com/tozoya" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; Zoya. Tous droits réservés.</li>
