Updated fa icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,24 +63,24 @@
           <section class="box special features" id="features">
             <div class="features-row">
               <section>
-                <span class="icon major fa-send-o accent2"></span>
+                <span class="icon major fa-glass accent2"></span>
                 <h3>Vous voulez vous déplacer?</h3>
                 <p>N'attendez plus votre taxi sous la pluie, ou sous le soleil frappant avec une foule de monde.</p>
               </section>
               <section>
-                <span class="icon major fa-search accent3"></span>
+                <span class="icon major fa-map-marker accent3"></span>
                 <h3>Ouvrez l'application mobile</h3>
                 <p>Plus besoin d'arrêter des taxis en route, nos chauffeurs voient exactement où vous êtes. Tapez simplement où vous allez.</p>
               </section>
             </div>
             <div class="features-row">
               <section>
-                <span class="icon major fa-plane accent5"></span>
+                <span class="icon major fa-car accent5"></span>
                 <h3>Confirmez votre commande</h3>
                 <p>L'application vous donne le prix de votre course à l'avance, donc pas de mauvaise surprise.</p>
               </section>
               <section>
-                <span class="icon major fa-envelope-o accent4"></span>
+                <span class="icon major fa-road accent4"></span>
                 <h3>Prenez place à bord</h3>
                 <p>Confirmez votre commande et votre chauffeur est en route. Prenez place et voyagez en toute tranquilité.</p>
               </section>
