Updated welcome message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
       <!-- Banner -->
         <section id="banner">
-          <h1 class="title">Bienvenu chez Zoya.</h1>
+          <h1 class="title">Bienvenue chez Zoya.</h1>
           <p>Trouvez votre transport en ville à la minute.</p>
           <ul class="actions">
 <!--            <li><%= link_to "Login With Facebook", user_omniauth_authorize_path(:facebook), class:"button special icon fa-facebook " %></li> -->
