updated instagram url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,7 @@
         <footer id="footer">
           <ul class="icons">
             <li><a href="https://facebook.com/bazoya" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="https://www.instagram.com/tozoya" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="https://www.instagram.com/zoyakin" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; Zoya. Tous droits réservés.</li>
