--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <%= csrf_meta_tags %>
 
   <!-- shiv here -->
-<%= favicon_link_tag 'favicon-32x32.ico' %>
+<!-- <%= favicon_link_tag 'favicon-32x32.ico' %> -->
 </head>
 
 <% if not user_signed_in? and current_page?(root_url) %>
