Added image assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               <h2>Trouver du transport et se déplacer en ville ne devrait pas être une tâche difficile pour vous.</h2>
               <p>Grâce à Zoya, trouvez facilement des chauffeurs et déplacez vous en toute tranquilité.</p>
             </header>
-            <span class="image featured"><%= image_tag("gps.jpg") %></span>
+            <span class="image featured"><%= image_tag("_MG_8970.jpg") %></span>
           </section>
 
           <section class="box special features" id="features">
