Changed background images

--- a/app/assets/stylesheets/landing_page2.css
+++ b/app/assets/stylesheets/landing_page2.css
@@ -3027,7 +3027,7 @@
 		/*background-attachment: scroll,							fixed;*/
 		background-attachment:fixed;
 		background-color: #666;
-		background-image: url("overlay.png"), url("streets.jpg");
+		background-image: url("overlay.png"), url("_MG_8957.jpg");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
